[project]
name = "release-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.3",
    "pytest-order>=1.3.0",
]
