[package]
name = "lib-audio-player"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.7"
log = "0.4.27"
rodio = "0.20.1"
uuid = { version = "1.16.0", features = ["v4"] }

[lib]
crate-type=["cdylib"]
name="audioplayer"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libasound2-dev:$CROSS_DEB_ARCH"
]
